--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "angular": "^1.5.8"
   },
   "devDependencies": {
+    "angular-mocks": "^1.5.8",
     "docco": "^0.7.0",
     "gh-pages": "^0.11.0",
     "karma": "^0.12.24",
     "karma-chrome-launcher": "^0.1.5",
     "karma-jasmine": "~0.2",
-    "angular-mocks": "^1.5.8"
+    "typescript": "^2.0.3",
+    "typings": "^1.4.0"
   }
 }
